--- a/Model-View-ViewModel/StoryBoard/Base.lproj/Main.storyboard
+++ b/Model-View-ViewModel/StoryBoard/Base.lproj/Main.storyboard
@@ -139,6 +139,9 @@
                                 <buttonConfiguration key="configuration" style="plain">
                                     <imageReference key="image" image="heart.fill" catalog="system" symbolScale="large"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="toggleFavorite:" destination="aIv-TJ-MMS" eventType="touchUpInside" id="K6g-UV-WkC"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="nCI-iB-mxK"/>
